tests/ui/consts/issue-94675.stderr
error[E0277]: the trait bound `Vec<usize>: [const] Index<_>` is not satisfied
  --> $DIR/issue-94675.rs:11:9
   |
LL |         self.bar[0] = baz.len();
   |         ^^^^^^^^^^^

error[E0277]: the trait bound `Vec<usize>: [const] IndexMut<usize>` is not satisfied
  --> $DIR/issue-94675.rs:11:9
   |
LL |         self.bar[0] = baz.len();
   |         ^^^^^^^^^^^

error[E0277]: the trait bound `Vec<usize>: [const] Index<usize>` is not satisfied
  --> $DIR/issue-94675.rs:11:9
   |
LL |         self.bar[0] = baz.len();
   |         ^^^^^^^^^^^
   |
note: required by a bound in `std::ops::IndexMut::index_mut`
  --> $SRC_DIR/core/src/ops/index.rs:LL:COL

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
